RESOLVED FIXED148504
autocapitalize="words" capitalizes every word's second character
https://bugs.webkit.org/show_bug.cgi?id=148504
Summary autocapitalize="words" capitalizes every word's second character
Steve
Reported 2015-08-26 17:26:44 PDT
Created attachment 260005 [details] HTML in linked JSFiddle Steps to reproduce: 1. Open this link on your iPad: https://jsfiddle.net/qvu5b4kt/embedded/result/ 2. Type some words into the <input> field 3. Type some words into the <textarea> field 4. Notice that the second character of each word is capitalized
Attachments
HTML in linked JSFiddle (631 bytes, text/html)
2015-08-26 17:26 PDT, Steve
no flags
Visual screenshot of bug (455.94 KB, image/jpeg)
2020-04-29 04:09 PDT, Cameron Little
no flags
Patch (11.88 KB, patch)
2020-07-08 01:24 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2015-09-11 10:59:21 PDT
Kyle Keesling
Comment 2 2017-11-28 08:27:03 PST
Still exists in iOS 11.2
Wenson Hsieh
Comment 3 2017-11-28 15:26:19 PST
(In reply to Kyle Keesling from comment #2) > Still exists in iOS 11.2 Is this using the above test case? If you could attach a video clip showing the issue, that would be much appreciated.
Kyle Keesling
Comment 4 2017-11-28 16:52:20 PST
Ok - let me clarify this just a bit. I thought my iPad was running the 11.2 public beta but it's actually running 11.1.2. It seems as though this bug does not happen on my iPhone X running 11.2 public beta 5, but it is occurring on my iPad Pro 9.7 in a couple of different scenarios/ways. When the Smart Cover is connected I get the same result described below, every second letter capitalized. When the Smart Cover is detached and I'm using the on screen keyboard no capitalization happens whatsoever - IE everything is lowercase. Here are a couple of videos demonstrating it. With Smart Cover - https://cl.ly/1H0h1u1G2E0u On Screen Keyboard - https://cl.ly/1F3k3O1H2w0Y Also here is the modified fiddle I used, based on the example below: http://jsfiddle.net/gdf9p3uj/3/embedded/result/
Wenson Hsieh
Comment 5 2017-11-30 11:34:39 PST
(In reply to Kyle Keesling from comment #4) > Ok - let me clarify this just a bit. I thought my iPad was running the 11.2 > public beta but it's actually running 11.1.2. > > It seems as though this bug does not happen on my iPhone X running 11.2 > public beta 5, but it is occurring on my iPad Pro 9.7 in a couple of > different scenarios/ways. > > When the Smart Cover is connected I get the same result described below, > every second letter capitalized. I see — I can reproduce this using a hardware keyboard on iPad. I will take a look. > > When the Smart Cover is detached and I'm using the on screen keyboard no > capitalization happens whatsoever - IE everything is lowercase. I can't reproduce this on either iPad or iPhone. > > Here are a couple of videos demonstrating it. > With Smart Cover - https://cl.ly/1H0h1u1G2E0u > On Screen Keyboard - https://cl.ly/1F3k3O1H2w0Y > > Also here is the modified fiddle I used, based on the example below: > http://jsfiddle.net/gdf9p3uj/3/embedded/result/
Kyle Keesling
Comment 6 2017-11-30 19:02:38 PST
Strange that you can't reproduce the second error with the on screen keyboard. Do you think it could be related to me immediately removing the keyboard and trying again? TBH the physical keyboard bug is the one that really grinds my gears though. Thanks for looking into it!
Brady Eidson
Comment 7 2019-09-24 18:53:40 PDT
Cameron Little
Comment 8 2020-04-29 04:09:16 PDT
Created attachment 397954 [details] Visual screenshot of bug
Cameron Little
Comment 9 2020-04-29 04:09:37 PDT
This still exists in iOS 13.3
Stefanos
Comment 10 2020-05-20 14:46:28 PDT
Any updates on this? Still exists on iOS 13.5
Wenson Hsieh
Comment 11 2020-07-08 00:41:21 PDT
(In reply to Stefanos from comment #10) > Any updates on this? Still exists on iOS 13.5 I can reproduce using both the hardware and software keyboard on iOS 13 and later.
Wenson Hsieh
Comment 12 2020-07-08 00:42:49 PDT
*** Bug 157410 has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 13 2020-07-08 00:47:04 PDT
Wenson Hsieh
Comment 14 2020-07-08 01:24:50 PDT
EWS
Comment 15 2020-07-08 10:08:27 PDT
Committed r264112: <https://trac.webkit.org/changeset/264112> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403765 [details].
Note You need to log in before you can comment on or make changes to this bug.